# pyivp

./: .gitignore  .gitmodules  00_cpplabs.ipynb  01_ivp_XYPoint.ipynb  02_ivp_XYSegList.ipynb  03_ivp_EdgeTag.ipynb  04_ivp_EdgeTagSet.ipynb  05_ivp_XYPatternBlock.ipynb  06_ivp_CPAEngine.ipynb  07_ivp_XYPolygon.ipynb  08_ivp_XYGrid.ipynb  09_ivp_XYSegment.ipynb  Makefile  README.md  cibuildwheel.sh  colab_jupyter.sh  docker_join.sh  docker_run.sh  drone.Makefile  duckiepond.Makefile  moos-dawg.Makefile  nginx-flask.md  oop.Makefile  robotx.Makefile  setup.py
Docker/: build.sh  colab_jupyter.sh  default  dockerfile  environment.yml
exameles/pybind11/: CMakeLists.txt
exameles/pytest/: test.py
example/: Makefile
example/cpp/: Makefile
example/cpp/tests/: Makefile
example/pybind11/: CMakeLists.txt
examples/automobile_example/: Makefile
examples/automobile_example/pybind11/: CMakeLists.txt
examples/cpplabs/lab05/: Makefile
examples/cpplabs/pybind11/: CMakeLists.txt  SegList.cpp  Vertex.cpp  cpplabs.cpp  pyivp.cpp
examples/cpplabs/pytest/: test_plus.py
flask/: movie.py  nginx-flask-hello.sh  nginx-flask-movie.sh
movingpandas/tutorials/data/: draw_pose_gps.csv
pyivp/cpplabs/: Makefile
pyivp/cpplabs/lab05/: Makefile
pyivp/cpplabs/lib_geometry/: Makefile
pyivp/cpplabs/pybind11/: CMakeLists.txt
pyivp/cpplabs/pytest/: test_plus.py
pyivp/src/: CMakeLists.txt  Makefile
pyivp/src_unit_tests/: CMakeLists.txt  alltest.sh
src/: CMakeLists.txt  Makefile
src/lib_geometry/: CMakeLists.txt  CPAEngine.cpp  GeomUtils.cpp  GeomUtils.h
src/lib_mbutil/: CMakeLists.txt
src/pybind11/: CMakeLists.txt  CPAEngine.cpp  EdgeTag.cpp  EdgeTagSet.cpp  GeomUtils.cpp  XYFormatUtilsPoly.cpp  XYFormatUtilsSegl.cpp  XYGrid.cpp  XYPatternBlock.cpp  XYPoint.cpp  XYPolygon.cpp  XYSegList.cpp  XYSeglr.cpp  XYSegment.cpp  XYSquare.cpp  XYVector.cpp  drone.Makefile  duckiepond.Makefile  moos-dawg.Makefile  oop.Makefile  pyivp.cpp  robotx.Makefile
src/pybind11/drone/: CMakeLists.txt
src/pybind11/duckiepond/: CMakeLists.txt
src/pybind11/moos-dawg/: CMakeLists.txt
src/pybind11/oop/: CMakeLists.txt
src/pybind11/robotx/: CMakeLists.txt
src/pytest/: test_EdgeTag.py  test_EdgeTagSet.py  test_XYPatternBlock.py  test_XYPoint.py  test_XYPolygon.py  test_XYSegList.py  test_XYSeglr.py  test_XYSegment.py  test_XYVector.py  test_pattern_block.py
src_unit_tests/: Makefile  README.md
svn-mirror/ivp/src/app_nzero/: main.cpp
svn-mirror/ivp/src/app_projfield/: main.cpp
svn-mirror/ivp/src/app_projpt/: main.cpp
(+23 files in other folders)
